--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -496,6 +496,11 @@
     <string name="settings_storage_ask_me_always" context="Whether to always ask the user each time.">Preguntar siempre la ruta de descarga</string>
     <string name="settings_storage_advanced_devices" context="Whether to enable the storage in advanced devices">Mostrar dispositivos avanzados (SD externa)</string>
     
+    <string-array name="settings_storage_download_location_array" context="if the user has an internal and an external SD card, it has to be set on the settings screen">
+        <item context="internal SD card option">Tarjeta SD interna</item>
+        <item context="external SD card option">Tarjeta SD externa</item>
+    </string-array>
+    
     <string name="settings_camera_upload_on" context="settings option">Activar Subidas de la Cámara</string>
     <string name="settings_camera_upload_turn_on" context="settings option">Activar Subidas de la Cámara</string>
     <string name="settings_camera_upload_off" context="settings option">Desactivar las Subidas de la Cámara</string>
