--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -173,6 +173,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">Create account</string>
     <string name="name_text" context="Name of the user">Name</string>
+    <string name="lastname_text" context="Last name of the user">Last Name</string>
     <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">I agree with MEGA\'s Terms of Service</string>
     <string name="already_account" context="Does the user already have a MEGA account">Already have an account?</string>
     
