--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -406,7 +406,7 @@
     <string name="my_account_total_space" context="Headline for the amount of total storage space">Espaço de Armazenamento</string>
     <string name="my_account_free_space" context="Headline for the amount of storage space is remaining">Espaço de Armazenamento Livre</string>
     <string name="my_account_used_space" context="Headline for the amount of storage space is used">Espaço de Armazenamento Utilizado</string>
-    <string name="my_account_upgrade_pro" context="Button to upgrade the account to PRO account">Fazer upgrade agora!</string>
+    <string name="my_account_upgrade_pro" context="Button to upgrade the account to PRO account">Fazer upgrade!</string>
     <string name="my_account_change_password" context="menu item">Alterar palavra-chave</string>
     <string name="warning_out_space" context="Warning in Cloud Drive when the user is runningut of space">Esta a ficar sem espaço! n Não quer fazer um upgrade à sua conta?</string>
     <string name="get_pro_account" context="Message to promote PRO accounts">Pode-se tornar um utilizador PRO!n Não quer fazer um upgrade à sua conta?</string>
